# nis2pyr

./: .gitignore  DEVELOP.md  LICENSE  README.md  TOOLS.md  environment.yml  setup.cfg
.github/workflows/: pypi.yml  test.yml
nis2pyr/: .gitignore  __init__.py  __main__.py  metadata.py  nis2pyr.py  reader.py  tests.bat  writer.py
scripts/: download_testdata.py  download_testimages.py  nd2_info.py  testdata.py
src/nis2pyr/: __main__.py  convertor.py  metadata.py  nis2pyr.py  reader.py  writer.py
tests/: NOTES.md  conftest.py  test_convertor.py  test_nis2pyr.py  test_reader.py  truth.py
