[metadata]
name = nis2pyr
version = 0.6.1
description = Utility for converting Nikon ND2 files to tiled pyramidal OME TIFF files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Frank Vernaillen
author_email = frank.vernaillen@vib.be
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/vibbits/nis2pyr
project_urls =
    Bug Tracker = https://github.com/vibbits/nis2pyr/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Natural Language :: English

[options]
packages = find:
package_dir = 
    =src
python_requires = >=3.7, <3.10
install_requires =
    importlib-metadata ; python_version < "3.8"
    tifffile
    imagecodecs
    opencv-python
    ome_types
    nd2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nis2pyr = nis2pyr.nis2pyr:main

[options.extras_require]
dev =
    coverage
    flake8
    mypy
    pyinstaller
    pytest
    pytest-cov
    pytest-mock
